<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp" >

            <LinearLayout
                android:id="@+id/age_part"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/ageTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/survey_age_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/ageEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif-condensed"
                    android:inputType="number" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/gender_part"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/genderTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/survey_gender_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/genderRadioGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/maleRadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed"
                        android:text="Male" />

                    <RadioButton
                        android:id="@+id/femaleRadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed"
                        android:text="Female" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/racial_part"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/racialTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/survey_racial_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/racialCheckBoxA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/survey_racial_checkA" />

                <CheckBox
                    android:id="@+id/racialCheckBoxB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/survey_racial_checkB" />

                <CheckBox
                    android:id="@+id/racialCheckBoxC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/survey_racial_checkC" />

                <CheckBox
                    android:id="@+id/racialCheckBoxD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/survey_racial_checkD" />

                <CheckBox
                    android:id="@+id/racialCheckBoxE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/survey_racial_checkE" />
            </LinearLayout>

            <TextView
                android:id="@+id/sleepHourTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/survey_sleep_hours_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/sleepHourEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/hours_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:text="(hours)" />

            </LinearLayout>

            <Button
                android:id="@+id/surveyButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="Submit"
                android:layout_marginBottom="25dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>