<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/add_lefestyle_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_lifestyle_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:enabled="false"
            android:visibility="gone" />

        <TextView
            android:id="@+id/lifestyle_type_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/lifestyle_type_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/lifestyle_type_spinner"
            style="?android:attr/absListViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:entries="@array/lifestyle_type_items"
            android:visibility="gone" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:text="Medium Text"
            android:id="@+id/lifestyle_type_name"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/pick_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_date_title" />

            <TextView
                android:id="@+id/pick_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_time_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" >

            <EditText
                android:id="@+id/date_picker"
                style="?android:spinnerStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="date" />

            <EditText
                android:id="@+id/time_picker"
                style="?android:spinnerStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="time" />
        </LinearLayout>

        <Spinner
            android:id="@+id/lifestyle_selection_spinner"
            style="?android:attr/absListViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:entries="@array/lifestyle_caffeine_selections" />

        <TextView
            android:id="@+id/lifestyle_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/lifestyle_note_title" />

        <EditText
            android:id="@+id/lifestyle_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textMultiLine" >
        </EditText>

        <TextView
            android:id="@+id/lifestyle_tips_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/lifestyle_tips_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lifestyle_tips_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp" />

    </LinearLayout>

</ScrollView>
